--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,12 @@
             "sizes": "512x512",
             "type": "image/png",
             "purpose" : "any maskable"
+        },
+        {
+            "src": "icon192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose" : "any maskable"
         }
     ]
 }
